Add bytes and binary file management